--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typeorm-example",
+  "name": "apirest-next-mysql-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
