--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "eslint": "^8.25.0",
+    "eslint-config-next": "^12.3.1",
+    "eslint-plugin-testing-library": "^5.9.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "typescript": "4.6.4"
